<resources>
    <string-array name="jogos_array">
        <item>Coin Toss</item>
        <item>Horse Race</item>
        <item>Dice Roll</item>
        <item>Russian Roulette</item>
    </string-array>
    <string name="app_name">Arrisca+</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="arrisca">Arrisca+</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registar">Registar</string>
</resources>