<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0D47A2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/background_login" />

        <LinearLayout
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="25dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/logotipo" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:backgroundTint="#C7B8B8"
                android:fontFamily="sans-serif-black"
                android:hint="@string/username"
                android:inputType="text"
                android:minHeight="48dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints="password"
                android:backgroundTint="#C7B8B8"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textColorHint="#212121"
                android:textStyle="bold"
                tools:ignore="VisualLintTextFieldSize" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFC107"
                android:text="@string/login"
                android:textColor="#D81B60"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnGoToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="#03A9F4"
                android:text="@string/registar"
                android:textColor="#4A148C" />

        </LinearLayout>
    </RelativeLayout>
</layout>
